# seadmin

./: CLAUDE.md  Cargo.toml  GEMINI.md  README.en.md  README.md  README.zh.md
docs/: feature-research.md  todo.md
src/: i18n.rs  main.rs
src/i18n/: ar.rs  de.rs  en.rs  es.rs  fr.rs  it.rs  ja.rs  kk.rs  ko.rs  mod.rs  nl.rs  no.rs  pt.rs  ru.rs  sv.rs  th.rs  vi.rs  zh_hans.rs  zh_hant.rs
src/selinux/: avc.rs  commands.rs  mod.rs
src/sudo/: mod.rs  runner.rs
src/ui/: app.rs  mod.rs  screens.rs  widgets.rs
src/ui/screens/: auth_popup.rs  avc_detail.rs  avc_list.rs  module_detail.rs  module_list.rs  path_input_popup.rs  policy_review.rs
