[package]
name = "seadmin"
version = "0.3.2"
edition = "2024"
description = "SELinux TUI 管理ツール"
license = "GPL-3.0-only"

[[bin]]
name = "seadmin"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
notify = "7"
zeroize = { version = "1", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
